--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"format": "prettier --write \"src/**/*.ts\"",
+		"update-deps": "ncu --filter !@types/node"
 	},
 	"keywords": [],
 	"author": "Minh Vương",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^20.14.9",
-		"@typescript-eslint/eslint-plugin": "^7.15.0",
-		"@typescript-eslint/parser": "^7.15.0",
-		"builtin-modules": "^4.0.0",
-		"esbuild": "^0.23.0",
+		"@types/node": "20.17.24",
+		"builtin-modules": "5.0.0",
+		"esbuild": "0.25.1",
+		"npm-check-updates": "17.1.15",
 		"obsidian": "latest",
-		"tslib": "2.6.3",
-		"typescript": "5.5.3"
+		"prettier": "3.5.3",
+		"tslib": "2.8.1",
+		"typescript": "5.8.2"
 	}
 }
