--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,14 +20,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          
-      - name: Install Yarn
-        run: npm i -g yarn
+
+      - name: Install pnpm
+        run: npm i -g pnpm
 
       - name: Build plugin
         run: |
-          yarn
-          yarn build
+          pnpm
+          pnpm run build
 
       - name: Release plugin
         uses: softprops/action-gh-release@v2
