--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build plugin
         run: |
-          pnpm
+          pnpm i
           pnpm run build
 
       - name: Release plugin
