--- a/.github/workflows/auto-pr-format.yml
+++ b/.github/workflows/auto-pr-format.yml
@@ -1,7 +1,7 @@
 name: Auto create PR to format source
 
 on:
-  create:
+  push:
     branches:
       - format/main
 
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v4
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
