--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -33,3 +33,4 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           message: 'fix: format source'
+          new_branch: 'format/main'
